Changed Website title

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>JobGator.com</h1>
     <br />
     <h2> Best Place to meet Employee and Employer</h2>
-    <p class="lead">JobGator is the best website for finding your dream job</p>
+    <p class="lead">JobGator is the best website for finding your dream jobs</p>
     <p class="fade">. Employers also get the best professional for their organization here.</p>
 </div>
 
